<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivtiy"
    android:background="@drawable/splash_screen_gradient"
    >
    <TextView
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:layout_above="@id/ll_login_roll_no"
        style="@style/tv_white_big"
        />
    <LinearLayout
        android:id="@+id/ll_login_roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20"
        android:layout_above="@id/ll_login_password"
        android:layout_marginBottom="20dp"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_login_roll_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/roll_no"
            style="@style/et_information_fields"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="20"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/PASSWORD"
            style="@style/et_information_fields"
            android:inputType="textPassword"
            />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_login_login"
        style="@style/btn_everywhere"
        android:text="@string/login_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_login_password"
        android:layout_marginTop="20dp"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/tv_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_light"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_below="@id/btn_login_login"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>