<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePassword"
    android:background="@drawable/splash_screen_gradient"
    >

    <TextView
        android:text="@string/password_question"
        android:layout_above="@id/ll_create_password_enter_pass"
        style="@style/tv_white_big"
        />

    <LinearLayout
        android:id="@+id/ll_create_password_enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20"
        android:layout_above="@id/ll_create_password_reenter_pass"
        android:layout_marginBottom="20dp"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_create_password_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/enter_new_password_caps"
            style="@style/et_information_fields"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_create_password_reenter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="20"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_create_password_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/confirm_password_caps"
            style="@style/et_information_fields"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_password_confirm"
        android:text="@string/confirm"
        style="@style/btn_everywhere"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_create_password_reenter_pass"
        />

</RelativeLayout>