<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPGenerate"
    android:background="@drawable/splash_screen_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:fontFamily="@font/lato_light"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_above="@id/ll_otp_generate_roll_no"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/ll_otp_generate_roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20"
        android:layout_above="@id/ll_otp_generate_mobile"
        android:layout_marginBottom="20dp"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_roll_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/roll_no"
            style="@style/et_information_fields"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_otp_generate_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="20"
        android:elevation="12dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <EditText
            android:layout_weight="18"
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:hint="@string/registered_mobile_number"
            style="@style/et_information_fields"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll_otp_generate_mobile"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/btn_generate_otp_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp"
            style="@style/btn_everywhere"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            />
    </LinearLayout>

</RelativeLayout>